force-app/main/default/objects/LeanData__LD_Journey_Persona__c/LeanData__LD_Journey_Persona__c.object-meta.xml
<CustomObject>
    <label>LeanData Journey Persona</label>
    <nameField>
        <label>LeanData Journey Persona Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeanData Journey Personas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>