force-app/main/default/objects/LeanData__LD_Journey_Persona__c/fields/LeanData__First_Signal_Days_To_Opportunity_Close__c.field-meta.xml
<CustomField>
    <fullName>LeanData__First_Signal_Days_To_Opportunity_Close__c</fullName>
    <formula>LeanData__LD_Journey__r.LeanData__Opportunity__r.CloseDate - DATEVALUE( LeanData__First_Signal_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Signal Days To Opportunity Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>