force-app/main/default/objects/LeanData__LD_Journey_Persona__c/fields/LeanData__Latest_Signal_Date__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Latest_Signal_Date__c</fullName>
    <label>Latest Signal Date</label>
    <type>DateTime</type>
</CustomField>