force-app/main/default/objects/LeanData__LD_Journey_Persona__c/fields/LeanData__Latest_Signal_Type__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Latest_Signal_Type__c</fullName>
    <label>Latest Signal Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>