force-app/main/default/objects/LeanData__LD_Journey_Persona__c/fields/LeanData__Total_Marketing_Signals__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Total_Marketing_Signals__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Marketing Signals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>